src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 222.2 84% 4.9%;
    --card: 0 0% 100%;
    --card-foreground: 222.2 84% 4.9%;
    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;
    --primary: 221.2 83.2% 53.3%;
    --primary-foreground: 210 40% 98%;
    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;
    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;
    --accent: 210 40% 96.1%;
    --accent-foreground: 222.2 47.4% 11.2%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;
    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;

    /*Custom theming for site*/
    --navbar-end: 240 100% 60%;
    --navbar-middle: 240 100% 70%;
    --link: 208, 100%, 50%;
    --link-hover: 208, 100%, 30%;

    --ring: 221.2 83.2% 53.3%;
    --radius: 1rem;
  }

  .dark {
    --background: 222.2 84% 4.9%;
    --foreground: 210 40% 98%;
    --card: 222.2 84% 4.9%;
    --card-foreground: 210 40% 98%;
    --popover: 222.2 84% 4.9%;
    --popover-foreground: 210 40% 98%;
    --primary: 217.2 91.2% 59.8%;
    --primary-foreground: 222.2 47.4% 11.2%;
    --secondary: 217.2 32.6% 17.5%;
    --secondary-foreground: 210 40% 98%;
    --muted: 217.2 32.6% 17.5%;
    --muted-foreground: 215 20.2% 65.1%;
    --accent: 217.2 32.6% 17.5%;
    --accent-foreground: 210 40% 98%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 210 40% 98%;
    --border: 217.2 32.6% 17.5%;
    --input: 217.2 32.6% 17.5%;

    /*Custom theming for site*/
    --navbar-end: 240 100% 30%;
    --navbar-middle: 240 100% 45%;
    --link: 208, 100%, 50%;
    --link-hover: 208, 100%, 80%;

    --ring: 224.3 76.3% 48%;
  }

  .xmas {
    --background: 2 100% 40%;
    --foreground: 210 40% 98%;
    --card: 100 80% 50%;
    --card-foreground: 210 40% 98%;
    --popover: 222.2 84% 4.9%;
    --popover-foreground: 210 40% 98%;
    --primary: 2 100% 50%;
    --primary-foreground: 210 40% 98%;
    --secondary: 217.2 32.6% 17.5%;
    --secondary-foreground: 210 40% 98%;
    --muted: 0 0% 50%;
    --muted-foreground: 0 0% 90%;
    --accent: 40 96% 40%;
    --accent-foreground: 53 100% 50%;
    --destructive: 270 100% 15%;
    --destructive-foreground: 300 100% 20%;
    --border: 50 100% 50%;
    --input: 217.2 32.6% 17.5%;

    /*Custom theming for site*/
    --navbar-end: 106 70% 30%;
    --navbar-middle: 100 80% 40%;
    --link: 40 95% 40%;
    --link-hover: 40 100% 60%;

    --ring: 224.3 76.3% 50%;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

/*----------------------------------- Element styling -----------------------------------*/
h1 {
  display: inline-block;
  width: 100%;
  text-align: center;
  font-size: 60px;
  font-weight: bold;
  padding: 0.5rem 4rem 0.5rem 4rem;
}

h2 {
  display: inline-block;
  width: 100%;
  text-align: center;
  font-size: 35px;
  font-style: italic;
  padding: 0.5rem 2rem 0.5rem 2rem;
}

h3 {
  display: inline-block;
  width: 100%;
  text-align: center;
  font-size: 25px;
  text-decoration: underline;
  padding: 0.5rem 2rem 0.5rem 2rem;
}

p {
  display: inline-block;
  width: 100%;
  text-align: left;
  text-indent: 1rem;
  font-size: 20px;
  padding-bottom: 1rem;
}

a {
  text-decoration: underline;
  font-weight: 600;
  @apply text-link-regular;
}
a:hover {
  font-weight: 500;
  @apply text-link-hover;
}

/*------------------------- Special formatting for unordered list -----------------------*/
ul {
  display: initial;
  text-align: left;
  font-size: 20px;
  width: 100%;
}

ul p {
  text-indent: 0rem;
}

ul li {
  text-align: inherit;
  font-size: 20px;
  padding-left: 20px;
  list-style-type: disc;
  text-decoration: inherit;
}

ul li li {
  list-style: circle;
  font-size: 18px;
}

ul li li li {
  list-style: square;
  font-weight: lighter;
}

/*---------------------------------- Component Styling ----------------------------------*/
.project-card-title {
  display: flex;
}

.project-card-image {
  display: block;
  height: 300px;
  padding: 10px;
}
/*------------------------------ Unique Properties styling ------------------------------*/
.page-content-holder {
  display: flex;
  flex-direction: column;
  width: 100%;
  align-items: center;
}

.main-content-holder {
  display: flex;
  flex-direction: column;
  width: 100%;
  padding: 0.5rem 15% 0.5rem 15%;
  align-items: center;
}

.main-content-text {
  display: inline-block;
  width: 100%;
  text-align: center;
  font-size: 20px;
  padding-bottom: 1rem;
}

.main-content-image-sq {
  display: block;
  margin: auto;
  width: 250px;
  aspect-ratio: 1 / 1;
}

.secondary-text {
  display: inline-block;
  width: 100%;
  text-align: center;
  font-size: 16px;
  padding: 0.25rem;
}

.secondary-image-circle {
  width: 12px;
  height: 12px;
  border-radius: 50%;
}

.secondary-content-image-sq {
  display: block;
  width: 100px;
  aspect-ratio: 1 / 1;
}

.object-container-vert {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  justify-content: space-evenly;
  align-items: center;
  padding: 20% 1rem 20% 1rem;
}

.object-container-horizon {
  display: flex;
  flex-direction: row;
  flex-grow: 1;
  width: 100%;
  justify-content: space-evenly;
  align-items: center;
  padding: 1rem 0 1rem 0;
}

.object-container-grid {
  display: grid;
  flex-grow: 1;
  grid-template-columns: repeat(3, minmax(0, 1fr));
  justify-content: center;
  gap: 2rem;
  padding: 20px 100px;
}

.grid-cell {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 5px;
}

.hidden-grid-content {
  overflow: auto;
  height: 150px;
}

@media (max-width: 1200px) {
  .object-container-grid {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }
}

@media (max-width: 800px) {
  .object-container-grid {
    grid-template-columns: repeat(1, minmax(0, 1fr));
  }
}

